src/styles/header.module.scss
@import 'mixins';
@import './variables';

@media only screen
and (min-device-width: 350px)
and (max-device-width: 667px)
and (-webkit-min-device-pixel-ratio: 2) {

    .logo {
        @include center-item;
    }

    .responsive-hamburger {
        margin-right: 1rem;
        z-index: 100;
    }

    .responsive-collapse {
        background-color: rgba(0, 0, 0, 0.9);
        height: 102vh;
        padding-top: 17rem;
        padding-bottom: 17rem;
        margin-top: -11rem;
        transition: 100ms;
    }

    .page-links {
        letter-spacing: .2em;
    }
}

/* For mobile iphones <8, in landscape orientation */
@media only screen
and (min-device-width: 319px)
and (max-device-width: 668px)
and (orientation: landscape)
and (-webkit-device-pixel-ratio: 2) {

    .navbar-layout {
        display: flex;
        justify-content: center;
        margin-top: -13.5em;
    }

    .responsive-collapse {
        background-color: rgba(0, 0, 0, 0.0);
        padding: 1rem auto;
        margin-top: 0;
        transition: none !important;
    }

    .logo {
        max-width: 80px !important;
        max-width:  80px !important;
    }

    .page-links {
        letter-spacing: .1em;
        font-size: .48em;
    }
}

/* For mobile iphones >X, in landscape orientation */
@media only screen
and (min-device-width: 669px)
and (max-device-width: 820px)
and (orientation: landscape)
and (-webkit-device-pixel-ratio: 3) {

    .navbar-layout {
        display: flex;
        justify-content: center;
    }

    .responsive-collapse {
        background-color: rgba(0, 0, 0, 0.0);
        padding: 1rem auto;
        margin-top: 0;
        transition: none !important;
    }

    .logo {
        max-width: 80px !important;
        max-width:  80px !important;
    }

    .page-links {
        letter-spacing: .1em;
        font-size: .48em;
    }
}

.navbar {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 100;
    width: 100%;
    padding: 0;
    margin: 0;
}

button {
    padding: inherit;
}

.navbar-layout {
    display: block;
}

.logo {
    max-height: 150px;
    max-width: 150px;
    position: relative;
    z-index: inherit;

    &:hover {
        text-decoration: none;
    }
}

.nav-link-a-tag {
    a:focus, a:active {
        outline: none;
    }
}

a {
    color: white !important;

    &:hover {
        color: white !important;
        text-decoration: none;
    }
}

.page-links {
    cursor: pointer;
    color: $lighter-font-colour;
    margin-left: .5em;
    margin-right: .5em;
    text-decoration: none;
    position: relative;
    padding-bottom: 8px;

    &::before,
    &::after {
        content: '';
        position: absolute;
        bottom: 4px;
        left: 0;
        right: 0;
        height: 2px;
        background-color: $lighter-font-colour;    
    }

    &::before {
        opacity: 0;
        transform: translateY(- $distance);
        transition: transform 0ms $easeOutBack, opacity 0s;
    }

    &::after {
        opacity: 0;
        transform: translateY($distance / 2);
        transition: transform $duration $easeOutBack, opacity $duration;
    }

    &:hover,
    &:focus {
        text-decoration: none;
        color: $lighter-font-colour;
        
        &::before,
        &::after {
            opacity: 1;
            transform: translateY(0);
        }

        &::before {
            transition: transform $duration $easeOutBack, opacity $duration;
        }

        &::after {
            transition: transform 0ms $duration $easeOutBack, opacity 0ms $duration;
        }
    }
}

.phone-icon {
    margin-left: .2em;
    margin-right: .5em;

    &:hover {
        text-decoration: none;
    }
}

